[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/NoiseWorld.gd" type="Script" id=1]
[ext_resource path="res://materials/grass-dirt.material" type="Material" id=2]
[ext_resource path="res://region2-00250-01-01-bm.png" type="Texture" id=3]
[ext_resource path="res://assets/maujoe.camera_control/scripts/camera_control.gd" type="Script" id=4]
[ext_resource path="res://Building.gd" type="Script" id=5]
[ext_resource path="res://VoxelLibrary.tres" type="VoxelLibrary" id=8]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/region2-00250-01-01-el.png-fbac1344ee9592e6d3e313099542d6b9.stex"

[sub_resource type="Environment" id=2]
ambient_light_color = Color( 1, 1, 1, 1 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 100, 0 )
script = ExtResource( 4 )
collisions = false

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_top = -0.000772146
anchor_bottom = -0.000772146
margin_left = 893.607
margin_top = 1.10585
margin_right = 1021.61
margin_bottom = 129.106
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoxelTerrain" type="VoxelTerrain" parent="."]
transform = Transform( 0.999829, 0, -0.0184994, 0, 1, 0, 0.0184994, 0, 0.999829, 0, 0, 0 )
voxel_library = ExtResource( 8 )
view_distance = 512
viewer_path = NodePath("../Camera")
material/0 = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
margin_left = 765.415
margin_top = 0.670166
margin_right = 893.415
margin_bottom = 128.67
rect_pivot_offset = Vector2( 93.996, 57.0896 )
texture = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Building" type="Spatial" parent="."]
script = ExtResource( 5 )
[connection signal="draw" from="TextureRect2" to="." method="_on_TextureRect2_draw"]
[connection signal="draw" from="TextureRect" to="." method="_on_TextureRect_draw"]
